--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>📧 Contact me - Mili Pernia Gonzalez - Front-End Developer</title>
+    <title>📧 Contact me - Ahmed Hammami - Web Developer</title>
     <link rel="icon" type="image/jpg" href="/images/icon-2.PNG" />
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -38,7 +38,7 @@
             class="col-1 d-none d-sm-none d-md-none d-lg-block d-xl-none"
           ></div>
           <a class="navbar-brand col-2 nav-name" href="/index.html">
-            Mili Pernia Gonzalez</a
+            Ahmed Hammami</a
           >
           <button
             class="navbar-toggler"
@@ -89,7 +89,7 @@
           </div>
         </div>
       </nav>
-      <!--Image Memoji-->
+      <!--Image (ken nheb nzid taswirti nhot image-contact fil class)-->
       <div class="row">
         <div class="col-12" align="center">
           <div class="card padding-contact padding-body-contact">
@@ -101,9 +101,10 @@
               </div>
               <div class="col-12" align="center">
                 <img
-                  src="images/icon-3.png"
-                  class="image-contact img-fluid"
-                  alt="Icon of Mili"
+                  src="images/icon-4.png"
+                  class=" img-fluid"
+                  style="width: 250px"
+                  alt="Icon of Ahmed"
                 />
               </div>
             </div>
@@ -111,34 +112,48 @@
             <div class="container">
               <div class="row" align="center">
                 <div class="col-12">
-                  <h3 class="email-contact">
-                    <a href="mailto:dev.milicodes@gmail.com" class="link-email"
-                      >dev.milicodes@gmail.com</a
+                  <h4 class="email-contact">
+                    <a
+                      href="mailto:ahmedhammami377@gmail.com"
+                      class="link-email"
+                      >ahmedhammami377@gmail.com</a
                     >
-                  </h3>
+                    <br />
+                    <a href="mailto:ahmed.hammami@etudiant-fst.utm.tn" class="link-email"
+                      >ahmed.hammami@etudiant-fst.utm.tn</a
+                    >
+                  </h4>
                 </div>
               </div>
             </div>
             <!--Another contact option-->
             <div class="container contact-information">
               <div class="row icons-contact" align="center">
-                <div class="col-4">
+                <div class="col-3">
+                  <a class="link-email" href="https://github.com/AhmedHammami7/"
+                    ><i class="fab fa-github"></i
+                  ></a>
+                </div>
+                <div class="col-3">
                   <a
                     class="link-email"
-                    href="https://www.linkedin.com/in/milagros-pernia-gonzalez-282ba8217/"
+                    href="https://www.linkedin.com/in/ahmed-hammami7/"
                     ><i class="fab fa-linkedin"></i
                   ></a>
                 </div>
-                <div class="col-4 margin-mobile-instagram">
+
+                <div class="col-3">
                   <a
                     class="link-email"
-                    href="https://www.instagram.com/mili.codes/"
-                    ><i class="fab fa-instagram"></i
+                    href="https://www.facebook.com/ahmed.hammami.99/"
+                    ><i class="fab fa-facebook"></i
                   ></a>
                 </div>
-                <div class="col-4">
-                  <a class="link-email" href="https://twitter.com/milicodes"
-                    ><i class="fab fa-twitter"></i
+                <div class="col-3 margin-mobile-instagram">
+                  <a
+                    class="link-email"
+                    href="https://www.instagram.com/ahmed_hammami_7/"
+                    ><i class="fab fa-instagram"></i
                   ></a>
                 </div>
               </div>
