--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ahmed Hammami | Web developer</title>
-    <link rel="icon" type="image/jpg" href="/images/icon-2.PNG" />
+    <link rel="icon" type="image/jpg" href="/images/icon-2.png" />
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -412,14 +412,13 @@
           <!--1st project-->
           <div class="col-6 d-none d-lg-block d-xl-block">
             <a
-              href="https://www.shecodes.io/workshops/shecodes-basics-2c08e5f7-8f3b-440c-b9a5-8ad15609015e/projects/418137"
+              href="https://github.com/AhmedHammami7/Space-rocket"
               target="_blank"
             >
               <img
                 class="project-one img-fluid"
-                src="
-https://s3.amazonaws.com/shecodesio-production/uploads/files/000/018/933/original/project1.jpeg?1634303892"
-                alt="Image of Joe Hisaishi website"
+                src="images/Project-1.png"
+                alt="Image of Space-rocket"
             /></a>
           </div>
           <!--1st project mobile-->
@@ -433,28 +432,27 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/018/933/origina
             align="center"
           >
             <a
-              href="https://www.shecodes.io/workshops/shecodes-basics-2c08e5f7-8f3b-440c-b9a5-8ad15609015e/projects/418137"
+              href="https://github.com/AhmedHammami7/Space-rocket"
               target="_blank"
             >
               <img
                 class="project-one-mobile img-fluid"
                 src="
-https://s3.amazonaws.com/shecodesio-production/uploads/files/000/018/933/original/project1.jpeg?1634303892"
-                alt="Image of Joe Hisaishi website"
+                images/Project-1.png
+                alt="Image of Space-rocket"
               />
             </a>
           </div>
           <!--2nd Project-->
           <div class="col-6 d-none d-lg-block d-xl-block">
             <a
-              href="https://www.shecodes.io/workshops/shecodes-plus-e97de30a-83ab-4a9d-a11c-2d346438a9bd/projects/494427"
+              href="https://e-magineagency.com"
               target="_blank"
             >
               <img
                 class="project-two img-fluid"
-                src="
-            https://s3.amazonaws.com/shecodesio-production/uploads/files/000/018/934/original/project2.jpeg?1634303899"
-                alt="Image of Joe Hisaishi website"
+                src="images/Project-2.png"
+                alt="Image of e-magine"
               />
             </a>
           </div>
@@ -469,14 +467,13 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/018/933/origina
             align="center"
           >
             <a
-              href="https://www.shecodes.io/workshops/shecodes-plus-e97de30a-83ab-4a9d-a11c-2d346438a9bd/projects/494427"
+              href="https://e-magineagency.com"
               target="_blank"
             >
               <img
                 class="project-two-mobile img-fluid"
-                src="
-https://s3.amazonaws.com/shecodesio-production/uploads/files/000/018/934/original/project2.jpeg?1634303899"
-                alt="Image of Joe Hisaishi website"
+                src="images/Project-2.png"
+                alt="Image of e-magine"
               />
             </a>
           </div>
