--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
               <img
                 class="project-one-mobile img-fluid"
                 src="
-                images/Project-1.png
+                images/Project-1.png"
                 alt="Image of Space-rocket"
               />
             </a>
@@ -689,7 +689,7 @@
             >
               <div class="card shadow-green">
                 <div class="card-body" align="center">
-                  <h5 class="card-title card-green">Music & Games</h5>
+                  <h5 class="card-title card-green">Fun Fact</h5>
                   <p class="card-info">
                     I can solve a Rubik's cube in under a minute! <img src="/images/rubik.ico" style="width: 50px;">
                   </p>
@@ -702,7 +702,7 @@
             >
               <div class="card shadow-green">
                 <div class="card-body" align="center">
-                  <h5 class="card-title card-green">Music & Games</h5>
+                  <h5 class="card-title card-green">Fun Fact</h5>
                   <p class="card-info">
                     I can solve a Rubik's cube in under a minute! <img src="/images/rubik.ico" style="width: 50px;">
                   </p>
@@ -733,7 +733,7 @@
         >
           <div class="col-12 memoji-mobile">
             <img
-              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/019/464/original/icon_3.PNG?1634855683"
+              src="images/icon-4.png"
               class="img-fluid"
               alt="icon of Ahmed"
             />
